test/baseline/func-to_string.test
; Tests for the to_string() function
; Converts a value to its string representation

2012-01-01 Test to_string function
    Assets:Test                       $100.00
    Equity:Opening

; Positive test: convert string (identity)
test eval "to_string(\"hello\")"
hello
end test

; Positive test: convert number to string
test eval "to_string(42)"
42
end test

; Negative test: too few arguments
test eval "to_string()" -> 1
__ERROR__
While evaluating value expression:
  to_string()
  ^^^^^^^^^^^
While calling function 'to_string ':
Error: Too few arguments to function
end test
